...
            
            VStack(alignment: .leading) {
                Text("Exercise Name*")
                    .font(.subheadline)
                    .foregroundColor(Color(ColorSet.brown.rawValue))
...
                        validateNameText()
                    }
                    .accessibility(label: Text("Name Field"))
                    .autocapitalization(.none)
                    .disableAutocorrection(true)
...
                            .font(.caption)
                            .foregroundColor(Color(UIColor(Constants.statusFailure)))
                            .accessibility(label: Text("Name Validation Text"))
                    }
                }
...
            HStack {
                VStack(alignment: .leading) {
                    Text("Location")
                        .font(.subheadline)
                        .foregroundColor(Color(ColorSet.brown.rawValue))
...
                        limitLocationText(locationTextLimit)
                    }
                    .accessibility(label: Text("Location Field"))
                    .autocapitalization(.none)
                    .disableAutocorrection(true)
...
                }
                VStack(alignment: .leading) {
                    Text("Date*")
                        .font(.subheadline)
                        .foregroundColor(Color(ColorSet.brown.rawValue))
...
            HStack {
                VStack(alignment: .leading) {
                    Text("Exercise Type")
                        .font(.subheadline)
                        .foregroundColor(Color(ColorSet.brown.rawValue))
...
            HStack {
                VStack(alignment: .leading) {
                    Text("Distance")
                        .font(.subheadline)
                        .foregroundColor(Color(ColorSet.brown.rawValue))
...
                            validateTimeAndDistance()
                        }
                        .accessibility(label: Text("Distance Field"))
                        .autocapitalization(.none)
                        .disableAutocorrection(true)
...
                            .font(.caption)
                            .foregroundColor(Color(UIColor(Constants.statusFailure)))
                            .accessibility(label: Text("Distance Validation Text"))
                    }
                }
                VStack(alignment: .leading) {
                    Text("Time")
                        .font(.subheadline)
                        .foregroundColor(Color(ColorSet.brown.rawValue))
...
                        validateTimeAndDistance()
                    }
                    .accessibility(label: Text("Time Field"))
                    .autocapitalization(.none)
                    .disableAutocorrection(true)
...
                            .font(.caption)
                            .foregroundColor(Color(UIColor(Constants.statusFailure)))
                            .accessibility(label: Text("Time Validation Text"))
                    }
                }
...
            HStack {
                VStack(alignment: .leading) {
                    Text("Feel")
                        .font(.subheadline)
                        .foregroundColor(Color(ColorSet.brown.rawValue))
...
            HStack {
                VStack(alignment: .leading) {
                    Text("Description")
                        .font(.subheadline)
                        .foregroundColor(Color(ColorSet.brown.rawValue))
...
                        limitDescriptionText(descriptionTextLimit)
                    })
                    .accessibility(label: Text("Description Field"))
                    .autocapitalization(.none)
                    .disableAutocorrection(true)
...
