...
    var body: some View {
        HStack(spacing: 20) {
            Button(action: {
                onCreate()
            }) {
                if !createLog.creating {
                    Text(meta.isExistingLog ? "Update" : "Create")
                        .foregroundColor(Color(UIColor(Constants.saintsXctfRed)))
                } else {
                    Text(meta.isExistingLog ? "Updating  " : "Creating  ")
                        .foregroundColor(Color(UIColor(Constants.saintsXctfRed)))
                    ProgressView()
                }
...
            }
            
            if !meta.isExistingLog {
                Button(action: {
                    onCancel()
                }) {
                    Text("Cancel")
                        .foregroundColor(Color("DarkGrayColor"))
                }
                .accessibility(label: Text("Cancel"))
                .disabled(createLog.creating)
                .alert(isPresented: $form.showCanceling) {
                    Alert(
                        title: Text("Are you sure you want to cancel your changes?"),
                        message: Text("Your progress will be lost."),
                        primaryButton: .default(
                            Text("No")
                        ),
                        secondaryButton: .cancel(
                            Text("Yes"),
                            action: {
                                onConfirmCancel()
                            }
                        )
                    )
                }
...
