...
    let minuteRegex = "^[0-9]{1,5}$"
    let secondRegex = "^[0-9]{1,2}$"
    let userTagRegex = "@[a-zA-Z0-9]+"
    
    var currentDate = "09/16/2017"
    
    let logTypes = ["Run", "Bike", "Swim", "Other"]
    let logMetrics = ["Miles", "Kilometers", "Meters"]
    
    let logTag = OSLog(subsystem: "SaintsXCTF.App.LogViewController", category: "LogViewController")
    
    /**
     Invoked when the LogViewController loads
     */
...
        
        // Check if we are editing an existing log.  If so, fill in the existing fields
        if editingLog {
            setFields()
            titleLabel.text = "Edit Exercise Log"
        } else {
            titleLabel.text = "Create Exercise Log"
        }
    }
    
    /**
     When the feel stepper is clicked, display the feel description
     - parameters:
...
